[package]
name = "r1cs-bellman"
description = "A bellman backend for the r1cs crate"
version = "0.1.1"
authors = ["Daniel Lubarov <daniel@mirprotocol.org>", "Brendan Farmer <brendan@mirprotocol.org>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mir-protocol/r1cs-bellman"
documentation = "https://docs.rs/r1cs-bellman"
keywords = ["R1CS", "cryptography", "SNARK"]
categories = ["cryptography"]
maintenance = { status = "actively-developed" }
edition = "2018"

[dependencies]
franklin-crypto = {git = "https://github.com/matter-labs/franklin-crypto", branch = "beta", features = ["multicore", "plonk"]}
# bellman = {package = "bellman_ce", version = "0.3.5", git="https://github.com/matter-labs/bellman.git"}
# pairing = {package = "pairing_ce", version = "0.21.*" }
bls12_381 = "0.3.1"
r1cs = "0.4.7"
num = "0.2.0"
rand = "0.4.6"
ff = "0.8"